# DocuRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAG.py  README.md  app.py  docker-compose.yml  docs_to_solr.ipynb  embeddings.py  llm.py  pyproject.toml  requirements.txt  woo_docs.json
.github/workflows/: ci.yml  docker-publish.yml
charts/docusearch/: Chart.yaml  values.yaml
charts/docusearch/templates/: deployment.yaml  ingress.yaml  service.yaml
deploy/: argocd-app.yaml
doc/: DEPLOYMENT.md
notebooks/: DocuSearch.ipynb  docs_to_solr.ipynb
src/: __init__.py  embeddings.py  llm.py  rag.py
src/docusearch/: llm.py  rag.py
src/prompts/: prompts.yaml
