[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docusearch"
version = "0.1.0"
description = "RAG over WOO documents using Solr and Fireworks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Conduction" }]

# Runtime dependencies
dependencies = [
    "sentence-transformers",
    "torch==2.4.0",
    "pysolr",
    "fireworks-ai",
    "pydantic>=2",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

# Configure uv to pull torch from the CPU wheels index only
[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cpu" }

